--- a/Magpie/Properties/Settings.settings
+++ b/Magpie/Properties/Settings.settings
@@ -68,7 +68,7 @@
     <Setting Name="ConfineCursorIn3DGames" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="AdapterIdx" Type="System.UInt32" Scope="User">
+    <Setting Name="AdapterIdx" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="CropTitleBarOfUWP" Type="System.Boolean" Scope="User">
