--- a/Runtime/Runtime.vcxproj
+++ b/Runtime/Runtime.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="CursorDrawer.h" />
+    <ClInclude Include="d3dx12.h" />
     <ClInclude Include="DesktopDuplicationFrameSource.h" />
     <ClInclude Include="EffectCache.h" />
     <ClInclude Include="EffectDrawer.h" />
