--- a/Runtime/Runtime.vcxproj.filters
+++ b/Runtime/Runtime.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClInclude Include="NewRenderer.h">
       <Filter>渲染</Filter>
     </ClInclude>
+    <ClInclude Include="d3dx12.h">
+      <Filter>应用程序</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
