feat: 不再支持指定帧率 目前认为这个功能没有意义 现在支持的模式： 1. 垂直同步：CPU 和 GPU 串行执行，当显卡性能无法达到 60 FPS，帧率会立即下落到 30 FPS。一帧延迟 2. 垂直同步（允许额外的延迟）：CPU 和 GPU 并行执行，两帧延迟 3. 关闭垂直同步：必须支持可变帧率，延迟极低

--- a/Runtime/Runtime.vcxproj.filters
+++ b/Runtime/Runtime.vcxproj.filters
@@ -19,9 +19,6 @@
     <ClCompile Include="Renderer.cpp">
       <Filter>渲染</Filter>
     </ClCompile>
-    <ClCompile Include="StepTimer.cpp">
-      <Filter>渲染</Filter>
-    </ClCompile>
     <ClCompile Include="App.cpp">
       <Filter>应用程序</Filter>
     </ClCompile>
@@ -64,6 +61,12 @@
     <ClCompile Include="NewRenderer.cpp">
       <Filter>渲染</Filter>
     </ClCompile>
+    <ClCompile Include="DeviceResources.cpp">
+      <Filter>渲染</Filter>
+    </ClCompile>
+    <ClCompile Include="FrameTimer.cpp">
+      <Filter>渲染</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
@@ -90,7 +93,7 @@
     <ClInclude Include="Renderer.h">
       <Filter>渲染</Filter>
     </ClInclude>
-    <ClInclude Include="StepTimer.h">
+    <ClInclude Include="FrameTimer.h">
       <Filter>渲染</Filter>
     </ClInclude>
     <ClInclude Include="App.h">
@@ -139,7 +142,10 @@
       <Filter>渲染</Filter>
     </ClInclude>
     <ClInclude Include="d3dx12.h">
-      <Filter>应用程序</Filter>
+      <Filter>渲染</Filter>
+    </ClInclude>
+    <ClInclude Include="DeviceResources.h">
+      <Filter>渲染</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
