--- a/Runtime/Runtime.vcxproj
+++ b/Runtime/Runtime.vcxproj
@@ -155,7 +155,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="DwmSharedSurfaceFrameSource.h" />
-    <ClInclude Include="FrameTimer.h" />
+    <ClInclude Include="FrameStatistics.h" />
     <ClInclude Include="StrUtils.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Utils.h" />
@@ -167,7 +167,7 @@
     <ClCompile Include="DeviceResources.cpp" />
     <ClCompile Include="ExclModeHack.cpp" />
     <ClCompile Include="FrameSourceBase.cpp" />
-    <ClCompile Include="FrameTimer.cpp" />
+    <ClCompile Include="FrameStatistics.cpp" />
     <ClCompile Include="GDIFrameSource.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="pch.cpp" />
