feat: 支持关闭垂直同步

--- a/Magpie/Properties/Settings.settings
+++ b/Magpie/Properties/Settings.settings
@@ -101,5 +101,8 @@
     <Setting Name="CustomCropping" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="DisableVSync" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
